--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "bmb Pairing",
-    "description": "B.M.B-TECH WA bot, Created by bmb tech",
-    "logo": "https://github.com/novaxmd/BMB-XMD-DATA/raw/refs/heads/main/bmb.jpg",
-    "repository": "https://github.com/novaxmd/Bmb-Session/tree/main",
-    "keywords": ["BMB-TECH"],
+    "name": "dml Pairing",
+    "description": "DML-TECH WA bot, Created by dml tech",
+    "logo": "https://dml-url.vercel.app/Dml.ff0wvv.jpg",
+    "repository": "https://github.com/MLILA17/DML-MD/tree/main",
+    "keywords": ["DML-TECH"],
     "success_url": "/", 
     "buildpacks": [{ "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" } ],
     "env": {      
