--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "description": "Bmb-Session",
-    "main": "./bmb.js",
+    "description": "dml-Session",
+    "main": "./dml.js",
   "engines" : { 
     "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
     "scripts": {
-    "start": "node bmb.js"
+    "start": "node dml.js"
   },
-  "author": "Bmb-Session",
+  "author": "dml-Session",
   "license": "GPL-3.0 license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
