--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-    "description": "dml-Session",
-    "main": "./dml.js",
+  "description": "dml-pair-code",
+  "main": "./dml.js",
+  "type": "commonjs",
   "engines" : { 
-    "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
     "scripts": {
-    "start": "node dml.js"
-  },
-  "author": "dml-Session",
+      "start": "pm2 start dml.js --deep-monitoring --attach --name dml",
+      "stop": "pm2 stop dmltech",
+     "restart": "pm2 restart dmltech"
+    },
+  "author": "dml-xmd",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
-    "maher-zubair-baileys": "^6.6.5",
+    "@whiskeysockets/baileys": "^6.6.7",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
+    "megajs": "^1.1.0",
     "pino": "^8.1.0",
+    "path": "^0.12.7",
     "phone" : "3.1.30",
     "body-parser": "^1.20.1",
-    "pastebin-js": "^1.0.6",
     "express": "^4.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pm2": "^5.2.0"
    }
 }
