--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "description": "dml-pair-code",
-  "main": "./dml.js",
-  "type": "commonjs",
+    "description": "dml",
+    "main": "./dml.js",
   "engines" : { 
+    "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
     "scripts": {
-      "start": "pm2 start dml.js --deep-monitoring --attach --name dml",
-      "stop": "pm2 stop dmltech",
-     "restart": "pm2 restart dmltech"
-    },
-  "author": "dml-md",
+    "start": "node dml.js"
+  },
+  "author": "dml",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.6.7",
+    "@whiskeysockets/baileys":"npm:baileys@6.7.18",
+    "maher-zubair-baileys": "^6.6.5",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
-    "megajs": "^1.1.0",
     "pino": "^8.1.0",
-    "path": "^0.12.7",
     "phone" : "3.1.30",
     "body-parser": "^1.20.1",
+    "pastebin-js": "^1.0.6",
     "express": "^4.18.1",
-    "path": "^0.12.7",
-    "pm2": "^5.2.0"
+    "path": "^0.12.7"
    }
 }
