--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "dml",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys":"github:nstar-y/bail",
+    "@whiskeysockets/baileys":"npm:@fizzxydev/baileys-pro",
     "maher-zubair-baileys": "^6.6.5",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
