--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "description": "dml",
+    "description": "pair-site",
     "main": "./dml.js",
   "engines" : { 
     "npm" : ">=9.7.2",
@@ -11,7 +11,7 @@
   "author": "dml",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys":"npm:@fizzxydev/baileys-pro",
+    "@whiskeysockets/baileys":"npm:baileys@6.7.18",
     "maher-zubair-baileys": "^6.6.5",
     "qrcode": "^1.5.3",
     "awesome-phonenumber": "^2.64.0",
