--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "dml Pairing",
+    "name": "pair-site",
     "description": "DML-TECH WA bot, Created by dml tech",
     "logo": "https://dml-url.vercel.app/Dml.ff0wvv.jpg",
     "repository": "https://github.com/MLILA17/DML-MD/tree/main",
