--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "scripts": {
     "start": "node dml.js"
   },
-  "author": "dml",
+  "author": "NjabuloAI",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys":"^6.5.0",
-    "maher-zubair-baileys": "^6.6.5",
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro",
+    "@bwmxmdtech/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",   
+    "@fizzxydev/baileys-pro": "^8.7.1",
+    "@octokit/rest": "^22.0.0",
+    "@aws-sdk/client-s3": "^3.896.0",
     "qrcode": "^1.5.3",
+    "aws-sdk": "^2.1692.0", 
     "awesome-phonenumber": "^2.64.0",
     "pino": "^8.1.0",
     "phone" : "3.1.30",
