--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "NjabuloAI",
   "license": "GPL-3.0 license",
   "dependencies": {
-    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro",
-    "@bwmxmdtech/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",   
+    "@whiskeysockets/baileys": "npm:baileys@6.7.20",   
     "@fizzxydev/baileys-pro": "^8.7.1",
     "@octokit/rest": "^22.0.0",
     "@aws-sdk/client-s3": "^3.896.0",
